# AI-Powered-Code-Review-Assistant

./: README.md  app.py  pyproject.toml
ai_code_review_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/corpus/: performance.md  secure-coding.md  style-lints.md
data/examples/: example.py
src/: agents.py  build_graph.py  cli.py  mcp_server.py  prompts.py  rag.py  run_agent.py  types.py
texts/: eval_harness.py
texts/fixtures/: sample_before_after.jsonl
